feat: adding companies and projects management.
